apps/overlays/production/fastapi-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-httproute
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - fastapi.nishantlabs.cloud
